kube-prom-ingress/qas/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: alertmanager
  labels:
    app: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: "alertmanager.qasdearxuany.com.cn"
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
        path: /
