kube-prom-ingress/qas/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: grafana
  labels:
    app: grafana
  namespace: monitoring
spec:
  tls:
  - hosts:
    - "grafana.qasdearxuany.com.cn"
    secretName: qasdearxuany-com-cn
  rules:
  - host: "grafana.qasdearxuany.com.cn"
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
